# WGEngin

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  server.py  test.html  test_meta_class.py  wgame
command/: db.py  main.py  server.py
common/: aes.py  context.py  log.py  request.py  session.py
config/: setting.py
database/: base.py  conf.py  mongo.py  redis.py
database/models/: bag.py  base.py  chat.py  organize.py  pet.py  player.py  user.py
game/: 游戏配置.py  游戏配置.toml
game/db/: models.py  rewirte.py
game/核心/: 基础属性.py  基础异常.py  基础数据类.py  基础数据类型.py  基础方法.py
game/核心/基类/: 元类.py  数据库映射.py  数据类.py  文件.py
game/核心/基类/游戏/: 区域.py  地图.py  技能.py  玩家.py  用户.py  页面.py
game/核心/工具方法/: __init__.py  数据.py  数据库.py  文件.py  时间.py  用户.py  页面.py
game/核心/数据/: 加载数据.py  数据库.py  注册游戏元素.py  游戏数据.py  路径.py
game/核心/数据模板/: 装备.py
game/核心/页面/: html5.py  工具.py  构建.py
game/核心/页面模板/: 基础页面.html  底部.html  开发信息.html
game/页面/: 页面管理.py  页面配置.py
game/页面/介绍页面/: 首页.py
game/页面/介绍页面/模板/: 首页.html
game/页面/异常页面/: 通用异常页面.py
game/页面/异常页面/模板/: 通用异常.html
game/页面/游戏主页/: 创建玩家角色.py  进入游戏.py
game/页面/游戏首页/: 进入游戏.py
game/页面/游戏首页/模板/: 进入游戏.html
game/页面/用户相关/: 注册.py  登出.py  登录.py
game/页面/用户相关/模板/: 注册.html  登录.html
game/页面资源/css/: base.css
game/页面资源/js/: clock.js  customTags.js
test/: test_page.py
utils/: logs.py
web/: __init__.py  auth.py  boot.py  db.py  exts.py  listener.py  router.py  server.py  static.py
web/game/: page.py
web/middlewares/: __init__.py
